# sec-comment-letter-alpha

./: .env.example  .gitignore  CLAUDE.md  README.md  README_KR.md  pyproject.toml  requirements.txt
.claude/: settings.json
dashboard/: README.md  app.py
dashboard/data_for_app/: day4_alpha_summary.json  day4_events.parquet  day4_factor_returns.parquet  day4_pairs.jsonl  day6_alpha_summary_matched.json  day6_factor_returns_matched.parquet  day6_post_tc_summary.json  day7_post_tc_matched_summary.json  day7_post_tc_rm_summary.json  day7_risk_managed_diagnostics.json  (+8 more)
docs/: day14_final_results.md  day4_results.md  day6_matched_control.md  day6_pdf_audit.md  day6_to_day13_audit.md  day7_fdr.md  day7_robustness.md  interview_demo_5min.md  limitations.md  overnight_2026-04-26_summary.md  paper_draft.md  preregistration_day4_event_study.md  preregistration_v3_corresp.md
scripts/: bootstrap_universe.py  bootstrap_universe_r3k.py  build_corresp_v3_split.py  contamination_audit.py  day3_corresp_extract.py  day3_extract.py  day4_build_pairs.py  day4_build_panel.py  day4_construct_signal.py  day4_orthogonalize.py  day4_run_all.py  day5_ablation_lm.py  day5_lm_sentiment.py  day5_pead_signal.py  day6_apply_tc.py  day6_compare.py  day6_pdf_audit.py  day6_signal_matched.py  day7_apply_tc_extended.py  day7_fdr.py  day7_risk_managed_overlay.py  day7_robustness.py  day7_robustness_extended.py  fetch_french_factors.py  fetch_lm_dictionary.py  fetch_quarterly_eps.py  fetch_yfinance_returns.py  write_checkpoint.py
tests/: test_day6_matched.py  test_day7_fdr.py  test_smoke.py
(+12 files in other folders)
